# Mercury

./: package.json
extras/: scale.js
src/: browse.html  customElementManager.js  generate.html  header.js  hotswap.js  icon.js  index.html  menu.html  menu.js  settings.html  sidebar.js  style.css  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/customElements/: bar-menu.js  header-bar.js  hot-swap.js  path-icon.js  sidebar-item.js  sub-page.js
src/icons/: back.path  cube.path  dropdown.path  generate.path  newSet.path  settings.path
src/managers/: customElements.js  themes.js
src/pages/: generate.html
